basic HTML and css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,86 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>myTunes</title>
     <link rel="stylesheet" href="styles/style.css">
-
 </head>
 <body>
+    
+    <header>
+        <nav>
+            <div class="wrapper flexRow">
+                <h1>myTunes</h1>
+                <form action="" class="searchFunction">
+                    <input type="radio" id="searchArtist" name="searchArtist">
+                    <label for="searchArtist">Artist</label>
+                    <input type="radio" id="searchGenre" name="searchGenre">
+                    <label for="searchGenre">Genre</label>
+                    <div class="searchBar">
+                        <input type="text" placeholder="Search">
+                        <input type="submit" value="Search">
+                        <!-- make this button a search icon -->
+                    </div>
+                </form>
+            </div>
+        </nav>
+    </header>
 
- <h1>Derek's first edit</h1>   
+    <main>
+        <!-- Section with the song image and songs list -->
+        <section>
+            <div class="wrapper">
+                <div class="songInfo flexRow flexColumn_mobile">
+                    <div class="songImage">
+                        <img src="https://picsum.photos/300/300?image=0" alt="lorem picsum">
+                    </div>
+                    <div class="songList">
+                        <h2>Top Songs</h2>
+                        <ul>
+                            <li>Song 1</li>
+                            <li>Song 2</li>
+                            <li>Song 3</li>
+                            <li>Song 4</li>
+                            <li>Song 5</li>
+                            <li>Song 6</li>
+                            <li>Song 7</li>
+                            <li>Song 8</li>
+                            <li>Song 9</li>
+                            <li>Song 10</li>
+                        </ul>
+                    </div>
+                </div> <!-- flexrow -->
+            </div> <!-- wrapper -->
+        </section>
+
+        <!-- Section with suggested artists -->
+        <section>
+            <div class="wrapper">
+                <div class="suggestions">
+                    <h2>Similar Artists</h2>
+                    <ul class="flexRow">
+                        <div class="songPair">
+                            <li><a href="">Song 1</a></li>
+                            <li><a href="">Song 2</a></li>
+                        </div>
+                        <div class="songPair">
+                            <li><a href="">Song 3</a></li>
+                            <li><a href="">Song 4</a></li>
+                        </div>
+                        <div class="songPair">
+                            <li><a href="">Song 5</a></li>
+                            <li><a href="">Song 6</a></li>
+                        </div>
+                    </ul>
+                </div>
+            </div> <!-- wrapper -->
+        </section>
+    </main>
+
+    <footer>
+        <div class="wrapper">
+            <p>Created by teamPlaid &copy;</p>
+            <p>Powered by last.fm</p>
+        </div>
+    </footer>
+
 <script src="scripts/script.js"></script>
-
 </body>
 </html>
