--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
 
     <footer>
         <div class="wrapper">
-            <p>Created by teamPlaid &copy;</p>
+            <p>Created by teamPlaid &copy; 2019</p>
             <p>Powered by last.fm</p>
         </div>
     </footer>
 
+<script src='https://code.jquery.com/jquery-3.3.1.js' integrity='sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=' crossorigin='anonymous'></script>
 <script src="scripts/script.js"></script>
 </body>
 </html>
