--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     
     <header>
-        <nav>
-            <div class="wrapper flexRow">
-                <h1>myTunes</h1>
+        <div class="headerMain wrapper flexRow">
+            <h1>myTunes</h1>
+            <nav>
                 <form action="" class="searchFunction">
-                    <input type="radio" id="searchArtist" name="searchArtist">
+                    <input type="radio" id="searchArtist" name="searchParameter">
                     <label for="searchArtist">Artist</label>
-                    <input type="radio" id="searchGenre" name="searchGenre">
+                    <input type="radio" id="searchGenre" name="searchParameter">
                     <label for="searchGenre">Genre</label>
                     <div class="searchBar">
                         <input type="text" placeholder="Search">
@@ -25,8 +25,8 @@
                         <!-- make this button a search icon -->
                     </div>
                 </form>
-            </div>
-        </nav>
+            </nav>
+        </div>
     </header>
     <main>
         <!-- Section with the song image and songs list -->
@@ -78,6 +78,8 @@
             </div> <!-- wrapper -->
         </section>
     </main>
+
+    
 
 </body>
 </html>
