--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         </section>
     </main>
 
+    <!-- force commit -->
     <footer>
         <div class="wrapper">
             <p>Created by teamPlaid &copy; 2019</p>
