--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>myTunes</h1>
             <nav>
                 <form action="" class="searchFunction">
-                    <input type="radio" id="searchArtist" name="searchParameter">
+                    <input type="radio" id="searchArtist" name="searchParameter" checked>
                     <label for="searchArtist">Artist</label>
 
                     <input type="radio" id="searchGenre" name="searchParameter">
