--- a/index.html
+++ b/index.html
@@ -58,21 +58,9 @@
                     <div class="suggestions">
                         <h2>Similar Artists</h2>
 
-                        <div class="flexRow">
-                            <div class="songPair">
-                                <li><a href="">Song 1</a></li>
-                                <li><a href="">Song 2</a></li>
-                            </div>
-
-                            <div class="songPair">
-                                <li><a href="">Song 3</a></li>
-                                <li><a href="">Song 4</a></li>
-                            </div>
-
-                            <div class="songPair">
-                                <li><a href="">Song 5</a></li>
-                                <li><a href="">Song 6</a></li>
-                            </div>
+                        <div class="flexColumn">
+                            <ul>
+                            </ul>
                         </div>
                     </div>
                 </div> <!-- wrapper -->
