--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div class="mainContainer">
             <!-- <div class="wrapper flexRow flexColumn_mobile"> -->
-            <div class="mainInfoDisplay wrapper flexRow">
+            <section class="mainInfoDisplay wrapper flexRow">
 
                 <!-- Image & Search Info -->
                 <section class="infoContainer flexRow">
@@ -60,7 +60,7 @@
                         <ol></ol>
                     </div> 
                 </section>
-            </div> <!-- wrapper -->
+            </section> <!-- wrapper -->
 
             <!-- Section with suggested artists -->
             <section>
