similarArtists search working

--- a/index.html
+++ b/index.html
@@ -67,11 +67,8 @@
                 <div class="wrapper">
                     <div class="suggestions">
                         <h2>Similar Artists</h2>
-
-                        <div class="flexColumn">
-                            <ul>
-                            </ul>
-                        </div>
+                        <ul class="grid">
+                        </ul>
                     </div>
                 </div> <!-- wrapper -->
             </section>
