click search overhaul

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
                 <!-- Top Tracks Relating to User Search -->
                 <section class="songListContainer">
 
-                    <h2>Top Tracks</h2>
+                    <div class="trackHeader">
+                        <ol class="trackHeading flexRow">
+                            <li><h2>Track Title</h2></li>
+                            <li><h2>Track Artist</h2></li>
+                        </ol>
+                    </div>
 
                     <div class="songList">
                         <ol></ol>
