styled header and footer

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>myTunes</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300|Open+Sans:600" rel="stylesheet">
+    <title>tune.in</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300|Open+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 
 </head>
@@ -14,7 +14,7 @@
     <header>
         <div class="headerContainer wrapper flexRow">
             
-            <h1>myTunes</h1>
+            <h1>tune.in</h1>
 
             <form action="submit" class="searchFunction flexRow">
 
@@ -83,7 +83,7 @@
     <!-- force commit -->
     <footer>
         <div class="wrapper">
-            <p>Created by teamPlaid &copy; 2019</p>
+            <p>Created by <span>teamPlaid</span> &copy; 2019</p>
             <p>Powered by last.fm</p>
         </div>
     </footer>
