desktop > mobile design

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="searchBar flexRow">
                     <label for="search" class="visuallyhidden search">please enter your search</label>
                     <input type="text" placeholder="Search" name="search">
-                    <input type="submit" value="tune.in">
+                    <input type="submit" value="Tune In!">
                 </div>
             </form>
         </div>
@@ -53,8 +53,8 @@
                 <div class="songListContainer">
                     <div class="trackHeader">
                         <ol class="trackHeading flexRow">
-                            <li><h2>Track Title</h2></li>
-                            <li><h2>Track Artist</h2></li>
+                            <li><h2>Songs</h2></li>
+                            <li><h2>Artist</h2></li>
                         </ol>
                     </div>
 
