k i'm done with styling

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </ol>
                     </div>
 
-                    <div class="songList">
+                    <div class="songList sb-container">
                         <ol></ol>
                     </div> 
                 </div>
@@ -87,6 +87,7 @@
 
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
     <script src='scripts/script.js'></script>
+    <script src='scripts/scrollBar.js'></script>
 
 </body>
 </html>
