edited form requirements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form action="submit" class="searchFunction flexRow">
 
                 <div class="searchSelector">
-                    <input type="radio" id="searchArtist" name="searchParameter">
+                    <input type="radio" id="searchArtist" name="searchParameter" required>
                     <label for="searchArtist">Artist</label>
 
                     <input type="radio" id="searchGenre" name="searchParameter">
